# learning_ml_ops

./: Makefile  README.md  makefile  pyproject.toml
.github/workflows/: python_ci.yaml
tests/: test_main.py
